# d2-admin/src/api/aries/category.js
@@ -1,9 +1,60 @@
 import { request } from '@/api/service'
 
 // 获取所有分类
-export function getAllCategories () {
+export function getAllCategories (type) {
   return request({
-    url: '/categories', // 请求地址
+    url: `/categories/all?category_type=${type}`, // 请求地址
     method: 'get' // 请求类型
+  })
+}
+
+// 分页获取分类
+export function getCategoriesByPage (params) {
+  return request({
+    url: '/categories',
+    params: params
+  })
+}
+
+// 获取所有父级分类
+export function getAllParentCategories (type) {
+  return request({
+    url: `/categories/parent?category_type=${type}`,
+    method: 'get'
+  })
+}
+
+// 添加分类
+export function addCategory (data) {
+  return request({
+    url: '/categories',
+    method: 'post',
+    data: data
+  })
+}
+
+// 修改分类
+export function updateCategory (id, data) {
+  // console.log('id: ', id, 'data: ', data)
+  return request({
+    url: `/categories/${id}`,
+    method: 'put',
+    data: data
+  })
+}
+
+// 删除分类
+export function deleteCategory (id) {
+  return request({
+    url: `/categories/${id}`,
+    method: 'delete'
+  })
+}
+
+// 批量删除分类
+export function multiDelCategory (ids) {
+  return request({
+    url: `/categories?ids=${ids}`,
+    method: 'delete'
   })
 }
