# handler/api/category.go
@@ -5,7 +5,6 @@ import (
 	"aries/model"
 	"aries/util"
 	"github.com/gin-gonic/gin"
-	"github.com/jinzhu/gorm"
 	"log"
 	"net/http"
 	"strconv"
@@ -15,26 +14,74 @@ import (
 // @Tags 分类
 // @version 1.0
 // @Accept application/json
+// @Param category_type query uint true "分类类型"
 // @Success 100 object util.Result 成功
 // @Failure 103/104 object util.Result 失败
 // @Router /api/v1/categories/all [get]
 func GetAllCategories(ctx *gin.Context) {
-	category := model.Category{}           // 建立 model 对象
-	categoryList, err := category.GetAll() // 调用 model 对应方法，从数据库中获取所有分类
-	result := util.Result{                 // 封装返回体内容
-		Code: util.Success, // 状态码
-		Msg:  "查询成功",       // 提示信息
-		Data: categoryList, // 数据
-	}
-	if err != nil { // 异常处理
-		log.Println(err.Error())
-		result.Code = util.ServerError
-		result.Msg = "服务器内部错误"
-		result.Data = nil
-		ctx.JSON(http.StatusOK, result) // 返回 json
+	categoryType := ctx.Query("category_type")
+	cType, err := strconv.Atoi(categoryType)
+	if err != nil {
+		ctx.JSON(http.StatusOK, util.Result{
+			Code: util.RequestError,
+			Msg:  "请求参数有误",
+			Data: nil,
+		})
 		return
 	}
-	ctx.JSON(http.StatusOK, result) // 返回 json
+	category := model.Category{}                      // 建立 model 对象
+	categoryList, err := category.GetAll(uint(cType)) // 调用 model 对应方法，从数据库中获取所有分类
+	if err != nil {                                   // 异常处理
+		log.Println(err.Error())
+		ctx.JSON(http.StatusOK, util.Result{
+			Code: util.ServerError,
+			Msg:  "服务器内部错误",
+			Data: nil,
+		}) // 返回 json
+		return
+	}
+	ctx.JSON(http.StatusOK, util.Result{
+		Code: util.Success,
+		Msg:  "查询成功",
+		Data: categoryList,
+	})
+}
+
+// @Summary 获取所有父级分类
+// @Tags 分类
+// @version 1.0
+// @Accept application/json
+// @Param category_type query uint true "分类类型"
+// @Success 100 object util.Result 成功
+// @Failure 103/104 object util.Result 失败
+// @Router /api/v1/categories/parent [get]
+func GetAllParentCategories(ctx *gin.Context) {
+	categoryType := ctx.Query("category_type")
+	cType, err := strconv.Atoi(categoryType)
+	if err != nil {
+		ctx.JSON(http.StatusOK, util.Result{
+			Code: util.RequestError,
+			Msg:  "请求参数有误",
+			Data: nil,
+		})
+		return
+	}
+	category := model.Category{}
+	categoryList, err := category.GetAllParents(uint(cType))
+	if err != nil {
+		log.Println(err.Error())
+		ctx.JSON(http.StatusOK, util.Result{
+			Code: util.ServerError,
+			Msg:  "服务器内部错误",
+			Data: nil,
+		})
+		return
+	}
+	ctx.JSON(http.StatusOK, util.Result{
+		Code: util.Success,
+		Msg:  "查询成功",
+		Data: categoryList,
+	})
 }
 
 // @Summary 分页获取分类数据
@@ -44,14 +91,24 @@ func GetAllCategories(ctx *gin.Context) {
 // @Param page query int false "页码"
 // @Param size query int false "每页条数"
 // @Param key query string false "关键词"
+// @Param category_type query uint true "分类类型"
 // @Success 100 object util.Result 成功
 // @Failure 103/104 object util.Result 失败
 // @Router /api/v1/categories [get]
 func GetCategoriesByPage(ctx *gin.Context) {
 	pageForm := form.CategoryPageForm{}
-	_ = ctx.ShouldBindQuery(&pageForm)
+	err := ctx.ShouldBindQuery(&pageForm)
+	if err != nil {
+		ctx.JSON(http.StatusOK, util.Result{
+			Code: util.RequestError,
+			Msg:  util.GetFormError(err),
+			Data: nil,
+		})
+		return
+	}
 	category := model.Category{}
-	categoryList, totalNum, err := category.GetByPage(&pageForm.Pagination, pageForm.Key)
+	categoryList, totalNum, err := category.GetByPage(&pageForm.Pagination, pageForm.Key,
+		*pageForm.CategoryType)
 	if err != nil {
 		ctx.JSON(http.StatusOK, util.Result{
 			Code: util.ServerError,
@@ -85,6 +142,7 @@ func AddCategory(ctx *gin.Context) {
 		})
 		return
 	}
+	//log.Println("addForm: ", addForm)
 	category := addForm.BindToModel()
 	if err := category.Create(); err != nil {
 		ctx.JSON(http.StatusOK, util.Result{
@@ -120,7 +178,7 @@ func UpdateCategory(ctx *gin.Context) {
 		})
 		return
 	}
-	editForm := form.CategoryEditForm{Id: uint(id)}
+	editForm := form.CategoryEditForm{}
 	if err := ctx.ShouldBindJSON(&editForm); err != nil {
 		ctx.JSON(http.StatusOK, util.Result{
 			Code: util.RequestError,
@@ -129,7 +187,9 @@ func UpdateCategory(ctx *gin.Context) {
 		})
 		return
 	}
+	editForm.Id = uint(id)
 	category := editForm.BindToModel()
+	log.Println(category)
 	if err := category.Update(); err != nil {
 		ctx.JSON(http.StatusOK, util.Result{
 			Code: util.ServerError,
@@ -163,10 +223,8 @@ func DeleteCategory(ctx *gin.Context) {
 		})
 		return
 	}
-	category := model.Category{
-		Model: gorm.Model{ID: uint(id)},
-	}
-	if err := category.DeleteById(); err != nil { //删除分类，捕捉异常
+	category := model.Category{}
+	if err := category.DeleteById(uint(id)); err != nil { //删除分类，捕捉异常
 		ctx.JSON(http.StatusOK, util.Result{
 			Code: util.ServerError,
 			Msg:  "服务器内部错误",
@@ -189,8 +247,16 @@ func DeleteCategory(ctx *gin.Context) {
 // @Success 100 object util.Result 成功
 // @Failure 103/104 object util.Result 失败
 // @Router /api/v1/categories [delete]
-func MultiDeleteCategory(ctx *gin.Context) {
+func MultiDelCategory(ctx *gin.Context) {
 	ids := ctx.DefaultQuery("ids", "") // 获取 ids
+	if ids == "" {
+		ctx.JSON(http.StatusOK, util.Result{
+			Code: util.RequestError,
+			Msg:  "请勾选要删除的条目",
+			Data: nil,
+		})
+		return
+	}
 	category := model.Category{}
 	if err := category.MultiDelByIds(ids); err != nil {
 		ctx.JSON(http.StatusOK, util.Result{
